--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -20,6 +20,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Convert repository name to lowercase
+        id: repo
+        run: echo "repository=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
+
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -37,8 +41,8 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository }}:latest
-            ghcr.io/${{ github.repository }}:${{ github.sha }}
+            ghcr.io/${{ steps.repo.outputs.repository }}:latest
+            ghcr.io/${{ steps.repo.outputs.repository }}:${{ github.sha }}
           platforms: linux/amd64
           build-args: |
             NODE_ENV=production
@@ -61,4 +65,3 @@ jobs:
                 "applicationId": "${{ secrets.DOKPLOY_APPLICATION_ID }}"
               }
             }'
-
