--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-tooltip": "^1.1.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
